@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-02-21T12:36:04Z",
+  "timestamp" : "2025-02-22T01:20:45Z",
   "count_outdated" : 4640,
   "uniques_outdated" : 2382,
-  "count" : 4659,
-  "uniques" : 2399,
+  "count" : 4660,
+  "uniques" : 2400,
   "clones" : [
     {
       "timestamp": "2025-02-08T00:00:00Z",
@@ -115,12 +115,12 @@
     },
     {
       "timestamp": "2025-02-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
