@@ -1,5 +1,5 @@
 {
-  "count": 19,
+  "count": 20,
   "uniques": 4,
   "clones": [
     {
@@ -64,8 +64,8 @@
     },
     {
       "timestamp": "2025-02-21T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
